--- a/Assigment/makefile
+++ b/Assigment/makefile
@@ -1,4 +1,4 @@
-build_all: clean http_client server
+build_all: http_client server
 
 server: 
 	gcc -Wall -o server dummy_http_server.c
@@ -6,7 +6,7 @@ server:
 http_client: 
 	gcc -Wall -o http_client dummy_http_client.c
 
-clean: 
+clean_all: 
 	-rm http_client server
 
-rebuild_all: clean build_all
+rebuild_all: clean_all build_all
